tests/src/frontend/typechecking/invalid/invalid_tparam_match_1.sk
class C<T>(value: T)

fun getMaxTimeFromFilter<V>(x: C<V>): Nullable<Int> {
  x match {
  | C(Int _) -> Null()
  }
}
